fix logo distortion

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,7 +30,7 @@
 
 .navbar-logo img {
   width: 140px;
-  height: 40px;
+  height: auto;
 }
 
 .fa-typo3 {
@@ -143,8 +143,7 @@
   }
 
   .navbar-logo img {
-    width: 180px;
-    height: 40px;
+    width: 120px;
     margin-top: 10px;
   }
 
